--- a/css/main.css
+++ b/css/main.css
@@ -496,7 +496,7 @@ ul.slimmenu li ul {
 	transition: all 0.3s ease-out;
 }
 
-.collapse-button {
+/* .collapse-button {
 	position: absolute;
 	right: 8px;
 	top: 60%;
@@ -520,16 +520,16 @@ ul.slimmenu li ul {
 	box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	-webkit-box-sizing: border-box
-}
+} */
 
-.collapse-button:hover,
+/* .collapse-button:hover,
 .collapse-button:focus {
 	background-image: none;
 	background-color: #040404;
 	color: #FFF;
-}
+} */
 
-.collapse-button .icon-bar {
+/* .collapse-button .icon-bar {
 	background-color: #fff;
 	border-radius: 1px 1px 1px 1px;
 	box-shadow: 0 1px 0 rgba(0, 0, 0, 0.25);
@@ -537,7 +537,7 @@ ul.slimmenu li ul {
 	height: 2px;
 	width: 18px;
 	margin: 2px 0;
-}
+} */
 
 ul.slimmenu {
 	padding-top: 10px;
@@ -3100,10 +3100,9 @@ figure.youtube a img {
 #map{
 	height: 500px;
 	width: 100%;
-	position: absolute;
 }
 
-.mask{
+/* .mask{
 	position: relative;
 	background: rgb(63, 60, 60);
 	opacity: 0.5;
@@ -3111,68 +3110,8 @@ figure.youtube a img {
 	width: 100%;
 	top: 0;
 	left: 0;
-}
-/* #google-container {
-	position: relative;
-	width: 100%;
-	height: 500px;
-}
-
-#cd-google-map {
-	position: relative;
-}
-
-#cd-zoom-in,
-#cd-zoom-out {
-	height: 32px;
-	width: 32px;
-	cursor: pointer;
-	margin-left: 10px;
-	background-repeat: no-repeat;
-	background-size: 32px 64px;
-	opacity: .7;
-	background-image: url("../images/cd-icon-controller.svg");
-	z-index: 3;
-	-webkit-transition: all 300ms linear;
-	-moz-transition: all 300ms linear;
-	-o-transition: all 300ms linear;
-	-ms-transition: all 300ms linear;
-	transition: all 300ms linear;
-}
-
-#cd-zoom-in:hover,
-#cd-zoom-out:hover {
-	opacity: 1;
-}
-
-.no-touch #cd-zoom-in:hover,
-.no-touch #cd-zoom-out:hover {
-	opacity: 1;
-}
-
-#cd-zoom-in:hover,
-#cd-zoom-out:hover {
-	opacity: 1;
-}
-
-@media only screen and (min-width: 768px) {
-	#cd-zoom-in,
-	#cd-zoom-out {
-		margin-left: 50px;
-	}
-}
-
-#cd-zoom-in {
-	background-position: 50% 0;
-	margin-top: 50px;
-	margin-bottom: 1px;
-	z-index: 3;
-}
-
-#cd-zoom-out {
-	background-position: 50% -32px;
-	z-index: 3;
 } */
+
 
 /* #Contact form
 ================================================== */
@@ -3920,7 +3859,209 @@ figure.youtube a img {
 		margin-right: 2px;
 	}
 }
-/*============================Captcha=================================*/
-.g-recaptcha{
-	margin-bottom: 60px;
+/*============================video=================================*/
+.banniere{
+	width: 100%;
+	height: 100vh;
+}
+.poster{
+	display: none;
+	position: relative;
+	z-index: 100;
+	top: -700px;
+	width: 50%;
+	left: 50%;
+	transform: translateX(-50%);
+	
+}
+
+
+@media screen and (max-width: 767px) {
+	.poster{
+		top: 170px;
+		display:block;
+	}
+	.banniere{
+		display: none;
+	}
+
+	.logo{
+		margin-top: -15px !important;
+	}
+}
+
+/*=============================Navigation============================*/
+.menu {
+	height: 80px;
+	background: rgba(0, 0, 0, 0.4);
+	position: fixed;
+	z-index: 100;
+	width: 100%;
+}
+
+.menu .logo{
+	margin-top: -35px;
+}
+
+.menu ul {
+	display: flex;
+	justify-content: flex-end;
+	padding: 20px;
+	margin-top: -10px;
+	
+}
+
+
+
+.menu ul li a {
+	display: block;
+	padding: 10px 18px;
+	font-size: 20px;
+	display: block;
+	text-decoration: none;
+	color: #fff;
+	font-weight: 600;
+}
+
+
+/* ANIMATION MENU BURGER*/
+.burger {
+	-webkit-transform: translateY(-150px);
+	transform: translateY(-150px);
+	left: 70%;
+	top: 0;
+	opacity: 0;
+	visibility: hidden;
+	cursor: pointer;
+	position: fixed;
+	z-index: 1000;
+}
+
+.burger svg {
+	fill: transparent;
+	stroke: #219bcd;
+	stroke-width: 2px;
+	stroke-linecap: round;
+}
+
+.burger .top {
+	stroke-dasharray: 40 250;
+	-webkit-transition: 1s cubic-bezier(0.7, 0, 0.3, 1);
+	transition: 1s cubic-bezier(0.7, 0, 0.3, 1);
+}
+
+.burger .middle {
+	stroke-dasharray: 40, 0;
+	stroke-dashoffset: 40;
+	-webkit-transition: 1s cubic-bezier(0.7, 0, 0.3, 1);
+	transition: 1s cubic-bezier(0.7, 0, 0.3, 1);
+}
+
+.burger .bottom {
+	stroke-dasharray: 40 310;
+	-webkit-transition: 1s cubic-bezier(0.7, 0, 0.3, 1);
+	transition: 1s cubic-bezier(0.7, 0, 0.3, 1);
+}
+
+.active .top {
+	stroke-dashoffset: -227;
+}
+
+.active .middle {
+	stroke-dasharray: 0, 40;
+	stroke-dashoffset: 20;
+}
+
+.active .bottom {
+	stroke-dashoffset: -287;
+}
+
+
+
+
+@media screen and (max-width: 767px) {
+	.menu{
+		transform: translateX(-500px);
+		
+		opacity: 0;
+	}
+	.burger {
+		
+            -webkit-transform: translateY(0);
+            transform: translateY(0);
+            opacity: 1;
+			visibility: visible;
+        
+	}
+	.logo-wrap .logo{
+		display: none;
+	}
+	/*=================================team===============================*/
+.team{
+	margin-left: -5%;
+	}
+	
+	
+}
+
+
+
+
+.nav-mobil  {
+	display: block;
+	z-index: 1000;
+	width: 60%;
+	height: 100%;;
+	text-align: center;
+	background-color: rgba(41, 40, 40, 0.8);
+	opacity: 1;
+	color: white;
+	visibility: visible;
+	position: fixed;
+	top: 0;
+	transform: translateY(0);
+
+	transition: transform 0.45s ease-in-out, opacity 0.25s ease-in-out;
+  }
+  .nav-mobil ul {
+	  display: flex;
+	  flex-direction: column;
+  }
+  .nav-mobil ul li{
+	  padding-top: 10px;
+
+  }
+  .nav-mobil ul li a:hover{
+	  color: #219bcd;
+  }
+  .nav-mobil ul li a{
+	  padding: 20px;
+	  color: white;
+	  display: block;
+	  font-size: 18px;
+	  font-weight: 600;
+  }
+   
+
+  .nav-mobil .hvr-overline-from-center:before{
+	  display: none;
+  }
+
+  .mask3.closed {
+	opacity: 1;
+	visibility: visible;
+}
+.mask3 {
+	position: fixed;
+	visibility: hidden;
+	z-index: 999;
+	opacity: 0;
+	top: 0;
+	left: 0;
+	z-index: 998;
+	width: 100%;
+	height: 100%;
+	background: rgba(53, 52, 52, 0.7);
+	-webkit-transition: opacity 0.5s ease-in-out;
+	transition: opacity 0.5s ease-in-out;
 }
