--- a/css/main.css
+++ b/css/main.css
@@ -3920,7 +3920,7 @@ figure.youtube a img {
 
 @media screen and (max-width: 767px) {
 	.poster{
-		top: 170px;
+		margin-top: 170px;
 		display:block;
 	}
 	.poster-mentions{
