--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,10 @@
 	article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
 		display: block; }
 	body {
-		line-height: 1; }
+		line-height: 1;
+		-webkit-font-smoothing: antialiased;
+        -moz-font-smoothing: antialiased;
+        text-rendering: optimizeLegibility !important; }
 	ol, ul {
 		list-style: none; }
 	blockquote, q {
