--- a/css/style.css
+++ b/css/style.css
@@ -31,8 +31,8 @@
 /* ==================================================Styles================================================== */
 body {
 	background: #f2f2f2;
-	font-family: 'Open Sans';
-	font-weight:300;
+	font-family: 'Nunito', sans-serif !important;
+	/* font-weight:300; */
 	font-size: 15px;
 	line-height:22px;
 	color:#fff;
@@ -52,7 +52,7 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
 	color: #dbdbdb;
-	font-family: 'Poppins', sans-serif;
+	font-family: 'Lato', sans-serif;
 	font-weight:400;
 	text-align:center;
 }
