--- a/css/main.css
+++ b/css/main.css
@@ -3955,6 +3955,9 @@ figure.youtube a img {
 		display: none;
 	}
 
+	.services-bottom-link {
+		font-size: 30px;
+	}
 	.logo{
 		margin-top: -15px !important;
 	}
