--- a/css/style.css
+++ b/css/style.css
@@ -4879,7 +4879,9 @@ figure.youtube a img {
 h2{
 	margin-bottom: 60px;
 }
-
+.textCard{
+	text-align: left;
+}
 
 
 /* ******************************************************************************************************************************************* 
@@ -5464,3 +5466,8 @@ ul.slimmenu li a.mPS2id-highlight,
 /* ******************************************************************************************************************************************* 
 *******************************************************************************************************************************************
 ********************************************************************************************************************************************/
+
+
+h1{
+	display:none;
+}
