--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,7 @@
 /* ==================================================Styles================================================== */
 body {
 	background: #f2f2f2;
-	font-family: 'Nunito', sans-serif !important;
+	font-family: 'Nunito', sans-serif ;
 	/* font-weight:300; */
 	font-size: 15px;
 	line-height:22px;
@@ -183,8 +183,10 @@ h6 { font-size: 14px; line-height: 20px;font-weight:600;}
 }
 ::selection {
 	color:#fff;
+	background: #219bcd;
 }
 ::-moz-selection {
+	background: #219bcd;
 	color:#fff;
 }
 
@@ -592,16 +594,6 @@ clear: both; }
 .clearfix {
 zoom: 1; }
 
-/* You can also use a <br class="clear" /> to clear columns */
-.clear {
-clear: both;
-display: block;
-overflow: hidden;
-visibility: hidden;
-width: 0;
-height: 0;
-}
-
 
 
 
@@ -639,8 +631,6 @@ Last change:	24/08/18
 
 }
 
-@import 'https://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic,800,800italic&subset=latin,greek,greek-ext,vietnamese,cyrillic-ext,latin-ext,cyrillic';
-@import 'https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700&subset=devanagari,latin-ext';
 body.royal_preloader {
 	background: none;
 	visibility: hidden;
@@ -748,7 +738,6 @@ body.royal_preloader {
 	bottom: 0;
 	opacity: .2;
 	left: 50%;
-	font-family: 'Poppins', sans-serif;
 	font-weight: 700;
 	height: 80px;
 	line-height: 80px;
@@ -773,7 +762,6 @@ body.royal_preloader {
 #royal_preloader.royal_preloader_scale_text .royal_preloader_loader {
 	color: #FFFFFF;
 	position: absolute;
-	font-family: 'Poppins', sans-serif;
 	font-weight: 700;
 	top: 0;
 	bottom: 0;
@@ -1193,7 +1181,6 @@ ul.slimmenu li a {
 	padding: 10px 0px;
 	cursor: pointer;
 	margin: 0px 12px;
-	font-family: 'Open Sans', sans-serif;
 	font-weight: 700;
 	text-transform: uppercase;
 	letter-spacing: 2px;
@@ -1479,6 +1466,7 @@ ul.slimmenu.collapsed li>ul {
 
 #sync2 .synced .item {
 	height: 25px;
+	background:#219bcd;
 }
 
 .home-mask {
@@ -1525,6 +1513,7 @@ ul.slimmenu.collapsed li>ul {
 	-o-transition: all 300ms linear;
 	-ms-transition: all 300ms linear;
 	transition: all 300ms linear;
+	display: none;
 }
 
 .home-text h1:hover {
@@ -1668,7 +1657,7 @@ svg * {
 .team-wrap h6 {
 	text-align: left;
 	padding-bottom: 20px;
-	letter-spacing: 1.2px !important;
+	letter-spacing: 1.2px;
 }
 
 .team-wrap p {
@@ -1819,7 +1808,6 @@ align-items: center;
 
 .counter-wrap.freelance-num p {
 	position: absolute;
-	font-family: 'Poppins', sans-serif;
 	top: 50%;
 	margin-top: -40px;
 	height: 80px;
@@ -1913,7 +1901,6 @@ align-items: center;
 
 .des-programs-author.left p {
 	padding-top: 5px;
-	font-family: 'Poppins', sans-serif;
 	font-size: 14px;
 	text-align: left;
 	width: 100%;
@@ -1931,7 +1918,6 @@ align-items: center;
 	overflow: hidden;
 	display: block;
 	font-weight: 300;
-	font-family: 'Poppins', sans-serif;
 	font-size: 13px;
 	line-height: 13px;
 	letter-spacing: 2px;
@@ -2023,7 +2009,6 @@ align-items: center;
 
 .des-programs-author.right p {
 	padding-top: 5px;
-	font-family: 'Poppins', sans-serif;
 	font-size: 14px;
 	text-align: right;
 	width: 100%;
@@ -2041,7 +2026,6 @@ align-items: center;
 	overflow: hidden;
 	display: block;
 	font-weight: 300;
-	font-family: 'Poppins', sans-serif;
 	font-size: 13px;
 	line-height: 13px;
 	letter-spacing: 2px;
@@ -2086,7 +2070,6 @@ align-items: center;
 	overflow: hidden;
 	display: block;
 	font-weight: 400;
-	font-family: 'Poppins', sans-serif;
 	font-size: 18px;
 	line-height: 18px;
 	letter-spacing: 2px;
@@ -2295,7 +2278,6 @@ align-items: center;
 	color: #fff;
 	border-radius: 30px;
 	background-color: #212121;
-	font-family: 'Poppins', sans-serif;
 	text-decoration: none;
 	-webkit-transition: all 300ms linear;
 	-moz-transition: all 300ms linear;
@@ -2812,7 +2794,6 @@ figure.youtube a img {
 .pricing-plan .top {
 	position: relative;
 	text-align: left;
-	font-family: 'Poppins', sans-serif;
 	font-weight: 600;
 	font-size: 13px;
 	line-height: 16px;
@@ -2838,7 +2819,6 @@ figure.youtube a img {
 .pricing-plan .price {
 	position: relative;
 	text-align: left;
-	font-family: 'Poppins', sans-serif;
 	font-weight: 300;
 	font-size: 38px;
 	line-height: 38px;
@@ -2865,7 +2845,6 @@ figure.youtube a img {
 .pricing-plan .offers {
 	position: relative;
 	text-align: left;
-	font-family: 'Poppins', sans-serif;
 	font-weight: 400;
 	font-size: 12px;
 	line-height: 18px;
@@ -2881,7 +2860,6 @@ figure.youtube a img {
 	z-index: 4;
 	cursor: pointer;
 	text-align: center;
-	font-family: 'Poppins', sans-serif;
 	font-weight: 500;
 	font-size: 12px;
 	line-height: 18px;
@@ -2921,7 +2899,6 @@ figure.youtube a img {
 }
 
 .skills-name {
-	font-family: 'Poppins', sans-serif;
 	position: relative;
 	width: 100%;
 	text-align: left;
@@ -3391,7 +3368,6 @@ figure.youtube a img {
 	display: block;
 	z-index: 10;
 	font-weight: 400;
-	font-family: 'Poppins', sans-serif;
 	font-size: 50px;
 	line-height: 22px;
 	letter-spacing: 2px;
@@ -3480,7 +3456,6 @@ figure.youtube a img {
 .journal-det h6 {
 	position: relative;
 	text-align: left;
-	font-family: 'Poppins', sans-serif;
 	font-weight: 500;
 	font-size: 11px;
 	line-height: 16px;
@@ -3514,7 +3489,6 @@ figure.youtube a img {
 	overflow: hidden;
 	display: block;
 	font-weight: 300;
-	font-family: 'Poppins', sans-serif;
 	font-size: 12px;
 	line-height: 18px;
 	letter-spacing: 2px;
@@ -3583,7 +3557,6 @@ figure.youtube a img {
 .journal-det-right h6 {
 	position: relative;
 	text-align: right;
-	font-family: 'Poppins', sans-serif;
 	font-weight: 500;
 	font-size: 11px;
 	line-height: 16px;
@@ -3617,7 +3590,6 @@ figure.youtube a img {
 	overflow: hidden;
 	display: block;
 	font-weight: 300;
-	font-family: 'Poppins', sans-serif;
 	font-size: 12px;
 	line-height: 18px;
 	letter-spacing: 2px;
@@ -3770,7 +3742,6 @@ figure.youtube a img {
 
 #ajax-form {
 	width: 100%;
-	font-family: 'Open Sans', sans-serif;
 	font-size: 10px;
 	line-height: 14px;
 	color: #fff;
@@ -3779,7 +3750,6 @@ figure.youtube a img {
 
 #ajax-form label {
 	display: block;
-	font-family: 'Open Sans', sans-serif;
 	font-size: 14px;
 	line-height: 30px;
 }
@@ -3789,7 +3759,6 @@ figure.youtube a img {
 	width: calc(100% - 40px);
 	padding-left: 20px;
 	padding-right: 20px;
-	font-family: 'Open Sans', sans-serif;
 	font-weight: 400;
 	letter-spacing: 1px;
 	font-size: 13px;
@@ -3806,7 +3775,6 @@ figure.youtube a img {
 	width: calc(100% - 40px);
 	padding-left: 20px;
 	padding-right: 20px;
-	font-family: 'Open Sans', sans-serif;
 	font-weight: 400;
 	letter-spacing: 1px;
 	font-size: 13px;
@@ -3825,7 +3793,6 @@ figure.youtube a img {
 }
 
 .error {
-	font: 11px/22px 'Open Sans', sans-serif;
 	text-transform: uppercase;
 	letter-spacing: 1px;
 	display: none;
@@ -3834,7 +3801,7 @@ figure.youtube a img {
 
 #ajaxsuccess {
 	color: #fff;
-	font: 20px/60px 'Open Sans', sans-serif;
+	font: 20px/60px;
 	height: 60px;
 	display: none;
 	padding-left: 10px;
@@ -4170,7 +4137,6 @@ figure.youtube a img {
 	color: #fff;
 	display: block;
 	float: left;
-	font-family: 'Open Sans';
 	font-size: 9px;
 	margin: 0;
 	padding: 6px 20px;
@@ -4584,6 +4550,9 @@ figure.youtube a img {
 	.logo{
 		margin-top: -15px !important;
 	}
+	.rightFoot{
+		text-align: center;
+	}
 }
 /* MEDIA QUERIES */
 @media screen and (min-width: 960px) {
@@ -4646,7 +4615,7 @@ figure.youtube a img {
 	text-decoration: none;
 	color: #fff;
 	font-weight: 600;
-	font-family: 'Lato' !important;
+	font-family: 'Lato';
 }
 
 
@@ -4919,9 +4888,7 @@ ul.slimmenu li a.mPS2id-highlight,
 .pro-bar {
 	background: #219bcd;
 }
-#sync2 .synced .item {
-	background:#219bcd;
-}
+
 #cd-zoom-in, #cd-zoom-out,
 #ajax-form button:hover,
 .list-social-footer li:hover,
@@ -4937,12 +4904,7 @@ ul.slimmenu li a.mPS2id-highlight,
 #ajax-form input:active {	
 	border-bottom:1px solid #219bcd;
 }
-::selection {
-	background: #219bcd;
-}
-::-moz-selection {
-	background: #219bcd;
-}
+
 
 @media only screen and (min-width: 1200px) {
 .journal-det{
@@ -5329,11 +5291,6 @@ ul.slimmenu li a.mPS2id-highlight,
   animation: scaleUpFrom .5s ease both;
 }
 
-.owl-fadeUp-out {
-  -webkit-animation: scaleUpTo .5s ease both;
-  -moz-animation: scaleUpTo .5s ease both;
-  animation: scaleUpTo .5s ease both;
-}
 /* Keyframes */
 /*empty*/
 @-webkit-keyframes empty {
@@ -5443,30 +5400,6 @@ ul.slimmenu li a.mPS2id-highlight,
 /* ******************************************************************************************************************************************* 
 *******************************************************************************************************************************************
 ********************************************************************************************************************************************/
-
-
-
-
-/*RETINA DISPLAY*/
-
-@media all and (-webkit-min-device-pixel-ratio: 1.5) { 
-
-	/*IMPORTANT : PLEASE NOTE:
-	Just define high resolution version (2x) all of the background images used in your website.
-	Example is given below:*/
-	
-	/*#some-element { background-image: url('../images/my_image@2x.png'); background-size: 200px 100px; } */
-	
-	/* Please visit: http://retinajs.com/ */
-	
-	}
-	
-
-
-/* ******************************************************************************************************************************************* 
-*******************************************************************************************************************************************
-********************************************************************************************************************************************/
-
 
 h1{
 	display:none;
