--- a/css/style.css
+++ b/css/style.css
@@ -5400,7 +5400,11 @@ ul.slimmenu li a.mPS2id-highlight,
 /* ******************************************************************************************************************************************* 
 *******************************************************************************************************************************************
 ********************************************************************************************************************************************/
-
+.rightFoot{
+	text-align: center;
+	display: flex;
+	justify-content: space-between;
+}
 h1{
 	display:none;
 }
