--- a/css/style.css
+++ b/css/style.css
@@ -5408,3 +5408,39 @@ ul.slimmenu li a.mPS2id-highlight,
 h1{
 	display:none;
 }
+#body404{
+	display: flex;
+	justify-content: center;
+	flex-direction: column;
+	align-items: center;
+	width: 100%;
+	height:100vh;
+}
+#h1Erreur{
+	display: block;
+	color: #636b6f;
+	justify-content: center;
+
+}
+.err404{
+	text-align: center;
+}
+.err404 h2{
+	color: #636b6f;
+	text-align: center;
+	font-size:20px;
+}
+.err404 a{
+	border: 1px solid #636b6f;
+	padding: 15px 25px;
+	color: #636b6f;
+	outline:none;
+	transition: all 0.35s ease-in-out;	
+	font-family: 'Nunito' sans-serif;
+	font-weight: 600;
+}
+.err404 a:hover{
+	background-color: #000;
+	color:#219bcd;
+	border:none;
+}
