--- a/css/maintenance.css
+++ b/css/maintenance.css
@@ -4,54 +4,11 @@
     width: 1500px;
 }
 
-/* hide horizontal scrollbars, since we use the vertical ones to scroll to the right */
-body
+#bodyMain
 {
-    overflow-x: hidden;
-}
-
-/**
-  * important: keep position fixed, you can however use top:0 instead of bottom:0
-  * if you want to make it stick to the top of the browser
-  */
-.scroll
-{
-    position: fixed;
-    bottom: 500;
-    left: 0;
-}
-.horizon
-{
-  z-index: 1;
-  width: 3000px;
-}
-
-.middle
-{
-  z-index: 500;
-  width: 4000px;
-}
-
-.front
-{
-  z-index: 1000;
-  width: 6000px;
-}
-
-
-.front{
-   display: flex;
-}
-
-
-#bodyMain{
+    overflow-x: hidden;    
     background-color: black;
-    color: #828E8D;
-}
-
-html,
-body
-{
+    color: #828E8D;   
     padding: 0;
     margin: 0;
     font-family: 'Open Sans', sans-serif;
@@ -59,6 +16,9 @@ body
     font-size: 16px;
 
 }
+
+/* html, */
+
 
 h1,
 h2,
@@ -114,6 +74,12 @@ pre
     float: right;
     padding-top: 15px;
 }
+.scroll
+{
+    position: fixed;
+    bottom: 500;
+    left: 0;
+}
 
 .horizon
 {
@@ -121,14 +87,17 @@ pre
     z-index: 100;
     width: 3000px;
     bottom:45%;
-    
+    z-index: 1;
+    width: 3000px;
 }
 
 .middle
 {
     z-index: 250;
     line-height: 0;
-    width: 4500px;
+    width: 4500px;  
+    z-index: 500;
+    width: 4000px;
 }
 
 .front
@@ -136,6 +105,9 @@ pre
     z-index: 500;
     top: 150px;
     width: 6000px;
+    z-index: 1000;
+    width: 6000px;
+    display: flex;
 }
 
 .intro
