--- a/css/styleMin.css
+++ b/css/styleMin.css
@@ -153,7 +153,39 @@ h3
     display: flex;
     width: 100%;
 }
-.footThree{
+.mediaLinks{
     display: flex;
-    
+    justify-content: space-between;
+    align-self: center;
+    width:25%;
+}
+/* .FBTweet{
+    padding: 0;
+    margin: 0;
+    margin-left: 0px;
+    list-style: none;
+    text-align: center;
+    width: 30px;
+    height: 30px;
+    display: inline-block;
+    cursor: pointer;
+    background: #fff;
+    border-radius: 50%;
+    margin-left: 4px;
+    -webkit-transition: all 300ms linear;
+    transition: all 300ms linear;
+
+}
+.FBTweet:first-child a{
+    color: #1b95e0;;
+}
+.FBTweet:last-child a{
+    color: #4267b2;
+} */
+
+.menMain{
+    display: flex;
+    flex-direction: column;
+    align-self: center;
+    width: 50%;
 }
