--- a/css/services.css
+++ b/css/services.css
@@ -1,18 +1,33 @@
-.pageServices{
-    display: flex;
-    flex-direction: column;
+.mainServ{
+    background-color: #131212;
+}
+.testServices{
+
+}
+.testArticle{
+    margin-bottom: 5%;
+}
+.testGroup img{
+    min-width: 40%;
+    margin-right:5%;
+}
+
+.testGroup p{
     margin:0;
+    padding:0;
 }
-.flexyFlexy{
-    margin: 0 10%;
+.testArticle:nth-child(2n){
+    background-color: #292929;
+    padding-bottom:5%;
+    margin-bottom: 0;
+}
+.testGroup img:nth-child(2n){
+    margin-left: 5%;
+    margin-right:0;
+}
+.testGroup{
     display: flex;
+    align-items: center;
+    padding:0 15%;
+    justify-content: space-between
 }
-.flexyFlexy img{
-    width:390px;
-    height:181px;
-}
-/* .vitrine{
-    width:100%;
-    background: #131212; 
-   
-} */
