--- a/css/maintenance.css
+++ b/css/maintenance.css
@@ -1,14 +1,15 @@
-.horizon, .middle, .front{
+.horizon,
+.middle,
+.front {
     position: fixed;
     bottom: 0;
     width: 1500px;
 }
 
-#bodyMain
-{
-    overflow-x: hidden;    
+#bodyMain {
+    overflow-x: hidden;
     background-color: black;
-    color: #828E8D;   
+    color: #828E8D;
     padding: 0;
     margin: 0;
     font-family: 'Open Sans', sans-serif;
@@ -22,36 +23,30 @@
 
 h1,
 h2,
-h3
-{
+h3 {
     color: #238acb;
 }
 
-h3
-{
+h3 {
     margin: 10px 0;
 }
 
-a
-{
+a {
     color: #238acb;
 }
 
-a img
-{
+a img {
     border: none;
 }
 
-pre
-{
+pre {
     font-size: 14px;
     color: white;
     padding: 10px;
     background: #646464;
 }
 
-.header
-{
+.header {
     position: fixed;
     top: 0;
     left: 0;
@@ -62,46 +57,41 @@ pre
     z-index: 1000;
 }
 
-.header .logo
-{
+.header .logo {
     float: left;
     padding: 22px;
     padding-left: 30px;
 }
 
-.header .credits
-{
+.header .credits {
     float: right;
     padding-top: 15px;
 }
-.scroll
-{
+
+.scroll {
     position: fixed;
     bottom: 500;
     left: 0;
 }
 
-.horizon
-{
+.horizon {
     line-height: 0;
     z-index: 100;
     width: 3000px;
-    bottom:45%;
+    bottom: 45%;
     z-index: 1;
     width: 3000px;
 }
 
-.middle
-{
+.middle {
     z-index: 250;
     line-height: 0;
-    width: 4500px;  
+    width: 4500px;
     z-index: 500;
     width: 4000px;
 }
 
-.front
-{
+.front {
     z-index: 500;
     top: 150px;
     width: 6000px;
@@ -110,8 +100,7 @@ pre
     display: flex;
 }
 
-.intro
-{
+.intro {
     position: absolute;
     left: 500px;
     top: 0px;
@@ -119,30 +108,26 @@ pre
     background: url('../images/scroll.png') no-repeat right 5px;
 }
 
-.page
-{
+.page {
     top: 0px;
     width: 800px;
     background: transparent;
     padding: 10px 30px;
     position: absolute;
-    
+
 }
 
-.description
-{
+.description {
 
     width: 800px;
 }
 
-.documentation
-{
-    left:250px;
+.documentation {
+    left: 250px;
     width: 1300px;
 }
 
-.options
-{
+.options {
     width: 1300px;
     left: 500px;
 }
@@ -157,7 +142,9 @@ pre
 {
     padding: 100px 30px 30px 30px;
 } */
-.vlockCol, vlockCol2, .vlockCol3{
+.vlockCol,
+vlockCol2,
+.vlockCol3 {
     display: flex;
     position: relative;
     width: 1800px;
@@ -165,57 +152,76 @@ pre
 
 }
 
-.h1Maintenance{
+.h1Maintenance {
     position: absolute;
 
     width: 100%;
 }
-.blockCol{
-    width:600px;
+
+.blockCol {
+    width: 600px;
     border: 1px #eee solid;
     padding: 10px 25px;
     background-color: rgba(24, 24, 24, 0.7);
     margin: 75px 25px 0 25px;
-    height:550px;
+    height: 550px;
 
 
 }
-.blockCol p{
+
+.blockCol p {
     text-align: justify;
 }
 
 
-.vlockCol2{
+.vlockCol2 {
     display: flex;
     position: relative;
-    width:1800px;
+    width: 1800px;
 }
 
-.vlockCol3{
+.vlockCol3 {
     display: flex;
     position: relative;
-    width:1800px;
+    width: 1800px;
 
 }
-.coloR{
-    color:#fff;
+
+.coloR {
+    color: #fff;
     text-decoration: underline;
 }
-.spaceLine{
+
+.spaceLine {
     line-height: 25px;
 }
-.whitey{
-    color:#fff;
+
+.whitey {
+    color: #fff;
 }
-#lastBlockCol{
+
+#lastBlockCol {
     /* width:1000px; */
 }
-.growtH{
-    border:1px solid #636b6f;padding:15px 25px;color:#636b6f;outline:0;transition:all .35s ease-in-out;font-family:'Nunito' sans-serif;font-weight:600;position: absolute;}
-.growtH:hover{
-    background-color:#000;color:#219bcd;border:0}
 
-.section{
+.growtH {
+    border: 1px solid #636b6f;
+    padding: 15px 25px;
+    color: #636b6f;
+    outline: 0;
+    transition: all .35s ease-in-out;
+    font-family: 'Nunito'sans-serif;
+    font-weight: 600;
+   
+}
+
+.growtH:hover {
+    background-color: #000;
+    color: #219bcd;
+    border: 0
+}
+
+.section {
     position: fixed;
-    bottom:0;
-}    
+    bottom: 0;
+}
