--- a/css/styleMinKO.css
+++ b/css/styleMinKO.css
@@ -8,11 +8,11 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
     
 }
 
-#svg-icon-2{
+.svg2{
     color:#E6DE21;
 }
 
-#svg-icon-1{
+.svg1{
     color:rgba(247, 96, 2, 0.795);}
 .logoFootMain{
    height:50%;
