--- a/css/styleMin.css
+++ b/css/styleMin.css
@@ -61,10 +61,10 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
 }
 
 #services-filter{
-    position: absolute;
+    position: fixed;
     text-align: center;
-    z-index: 20;
-    top: 20px;
+    z-index: 1000;
+    top: 80px;
     left: 50%;
     -webkit-transform: translateX(-50%);
     -moz-transform: translateX(-50%);
@@ -318,3 +318,96 @@ figure a {
 
 
 .growtH{position:absolute;top:550px;}
+
+
+
+@media (max-width: 768px){
+    
+    .services1{
+        display: flex;
+        flex-direction: column;
+        align-content: space-around;
+    }
+    .contenu,
+    figure {
+        width:100%;
+        height: 700px;
+        margin-bottom: 100px;
+    }
+    .devant h2:after {
+        position: absolute;
+        bottom: -10px;
+        left: 70px;
+        right: 70px;
+        height: 2px;
+        background: #219bcd;
+        text-transform: uppercase;
+        content: 'Infos';
+        font-size: 15px;
+        transition: transform 0.35s;
+        transform: translate3d(-140%, 0, 0);
+    }
+    /*====================================Footer Services=====================================*/
+    .jammin{
+        display: none;
+    }
+
+    .logoFootMain{
+        margin-top: 10px;
+    }
+   
+
+    .menMain{
+        width: 100%;
+        text-align: center;
+        font-size: 11px;
+        width: 100%;
+    }
+.list-social-footer{
+    margin-top: -5px;
+}
+.blockCol{
+    width: 100vw;
+}
+  
+    .description2, .documentation, .options{
+        margin-top: -150px;
+        margin-left: -20px;
+    }
+
+    .growtH{
+        border: 1px solid #636b6f;
+        padding: 10px 20px;
+        color: #fff;
+        outline: 0;
+        transition: all .35s ease-in-out;
+        font-family: 'Nunito' sans-serif;
+        font-weight: 600;
+        position: absolute;
+        top: 560px;
+        margin-left: 8%;
+    }
+  .head-serv{
+      position: fixed;
+      z-index: 1000;
+    }
+    .front{
+        margin-top: -40px;
+        z-index: 1;
+    }
+    
+.bandeau{
+    position: fixed;
+    margin-left: -15%;
+    margin-top: -5px;
+    width: 60%;
+    text-align: center;
+}
+#services-filter ul li a{
+    font-size: 11px;
+}
+   
+ #filter{
+     display: flex;
+ }
+}
